Feat: 장바구니 목록 삭제, 주문 시 확인 모달 추가

--- a/src/main/resources/static/user/customer_order/css/cart.css
+++ b/src/main/resources/static/user/customer_order/css/cart.css
@@ -49,6 +49,7 @@
 	margin: 0 8px;
 }
 
+
 .table-header, .cart-item {
 	display: flex;
 	gap: 20px;
@@ -72,6 +73,7 @@
 
 .product-info {
 	width: 320px;
+	cursor: pointer;
 }
 
 .price-qty, .delivery-date {
