--- a/src/main/resources/templates/user/mypage/member_update/memberUpdate.html
+++ b/src/main/resources/templates/user/mypage/member_update/memberUpdate.html
@@ -5,8 +5,8 @@
       layout:decorate="~{/user/common/layout/myPageLayout}"
       layout:fragment="Content">
 	
-	  <link rel="stylesheet" href="/user/mypage/css/memberUpdate.css" />
-	  <link rel="stylesheet" href="/user/mypage/css/eyeIcon.css"/>
+	  <link rel="stylesheet" href="/user/mypage/account/css/memberUpdate.css" />
+	  <link rel="stylesheet" href="/user/mypage/common/css/eyeIcon.css"/>
 	  <link rel="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
       
 <div class="content">
@@ -33,5 +33,5 @@
 		</div>
 </div>
 		<script src="https://code.jquery.com/jquery-3.7.1.js"></script>
-		<script src="/user/mypage/js/eye.js"></script>
+		<script src="/user/mypage/common/js/eye.js"></script>
 </html>
