--- a/src/main/resources/templates/user/mypage/review/myReview.html
+++ b/src/main/resources/templates/user/mypage/review/myReview.html
@@ -5,7 +5,7 @@
       layout:decorate="~{/user/common/layout/myPageLayout}"
       layout:fragment="Content">
       
-      <link rel="stylesheet" href="/user/mypage/css/review.css"/>
+      <link rel="stylesheet" href="/user/mypage/review/css/review.css"/>
       
 <div class="content">
 	
@@ -38,12 +38,12 @@
 		  <span>검색결과가 없습니다</span>
 		</div>
 	    
-	    <!-- #book-list 리스트 뽑아올 곳 -->
+	    <!-- 리스트 뽑아올 곳 -->
 		<div id="book-list"></div>
 		
 	</div>	    
 </div>
 	<script src="https://code.jquery.com/jquery-3.7.1.js"></script>
-	<script src="/user/mypage/js/myReview.js"></script>
+	<script src="/user/mypage/review/js/myReview.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 </html>
