--- a/src/main/resources/templates/user/mypage/review/writeReview.html
+++ b/src/main/resources/templates/user/mypage/review/writeReview.html
@@ -5,9 +5,9 @@
       layout:decorate="~{/user/common/layout/myPageLayout}"
       layout:fragment="Content">
 	 
-	 <link rel="stylesheet" href="/user/mypage/css/review.css"/>
+	 <link rel="stylesheet" href="/user/mypage/review/css/review.css"/>
 	 
-<div>
+<div class="content">
 	<div class="myinfo-content">
 
 		<p class="myinfo-title">리뷰 작성</p>
@@ -51,5 +51,5 @@
 	</div>
 </div>
 	<script src="https://code.jquery.com/jquery-3.7.1.js"></script>
-	<script src="/user/mypage/js/wrtieReview.js"></script>	
+	<script src="/user/mypage/review/js/wrtieReview.js"></script>	
 </html>
