--- a/src/main/resources/static/user/mypage/review/css/review.css
+++ b/src/main/resources/static/user/mypage/review/css/review.css
@@ -109,14 +109,6 @@
 	width: 180px;
 }
 
-.important::after {
-	content: "*";
-	color: red;
-	font-weight: bold;
-	margin-left: 2px;
-	position: absolute;
-	transform: translateY(-45%);
-}
 
 .char-count {
 	position: absolute;
@@ -201,6 +193,17 @@
 .btn-spacebetween {
 	margin: 0 10px;
 	color: C0C0C0;
+}
+
+.modal-head {
+    width: 100%;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #c0c0c0;
+    font-size: 20px;
+    font-weight: 700;
 }
 
 .edit-modal-content {
