--- a/src/main/resources/templates/user/common/layout/myPageLayout.html
+++ b/src/main/resources/templates/user/common/layout/myPageLayout.html
@@ -42,7 +42,7 @@
                     고객센터
                     <ul class="sub-menu">
                         <li class="sub-menu-list"><a href="#">공지사항</a></li>
-                        <li class="sub-menu-list"><a href="#">1:1문의</a></li>
+                        <li class="sub-menu-list"><a href="/user/mypage/inquiries-page">1:1문의</a></li>
                     </ul>
                 </li>
             </ul>
