--- a/src/main/resources/templates/user/common/layout/myPageLayout.html
+++ b/src/main/resources/templates/user/common/layout/myPageLayout.html
@@ -41,7 +41,7 @@
                 <li class="menu-item">
                     고객센터
                     <ul class="sub-menu">
-                        <li class="sub-menu-list"><a href="#">공지사항</a></li>
+                        <li class="sub-menu-list"><a href="/user/mypage/notices-page">공지사항</a></li>
                         <li class="sub-menu-list"><a href="/user/mypage/inquiries-page">1:1문의</a></li>
                     </ul>
                 </li>
