Design: 주문/배송목록 css 추가 중

--- a/src/main/resources/templates/user/common/fragments/header.html
+++ b/src/main/resources/templates/user/common/fragments/header.html
@@ -9,13 +9,13 @@
 	    <div id="loginMenu" class="top-menu-wrap">
 	        <a href="/user/login" class="top-menu-link">로그인</a>
 	      	<a href="/user/cart/list" class="top-menu-link">장바구니</a>
-	   		<a href="/user/contact" class="top-menu-link">1:1문의</a>
+	   		<a href="/user/mypage/inquiries-page" class="top-menu-link">1:1문의</a>
 	    </div>
 	    <div id="userMenu" class="top-menu-wrap" style="display: none;">
 	        <a href="/user/logout" class="top-menu-link">로그아웃</a>
 	        <a href="/user/mypage/orderList" class="top-menu-link">마이페이지</a>
 		    <a href="/user/cart/list" class="top-menu-link">장바구니</a>
-		    <a href="/user/contact" class="top-menu-link">1:1문의</a>
+		    <a href="/user/mypage/inquiries-page" class="top-menu-link">1:1문의</a>
 	    </div>
     </div>
 
@@ -36,7 +36,7 @@
                 <div class="cart-qty">
                     <p></p>
                 </div>
-            </a> <a href=""> <i class="fa-solid fa-circle-user user-icon"></i>
+            </a> <a href="/user/mypage/orderList"> <i class="fa-solid fa-circle-user user-icon"></i>
         </a>
         </div>
     </div>
@@ -81,8 +81,8 @@
                         <p></p>
                     </div>
                 </a>
-                <a href=""> <i class="fa-solid fa-circle-user user-icon"></i></a>
-                <a href=""> <img src="/user/common/imgs/web-cs-icon.svg" alt="고객센터" class="cs-icon"></a>
+                <a href="/user/mypage/orderList"> <i class="fa-solid fa-circle-user user-icon"></i></a>
+                <a href="/user/mypage/inquiries-page"> <img src="/user/common/imgs/web-cs-icon.svg" alt="고객센터" class="cs-icon"></a>
             </div>
         </div>
     </div>
