--- a/src/main/resources/templates/user/main/customer_order/cart.html
+++ b/src/main/resources/templates/user/main/customer_order/cart.html
@@ -70,7 +70,7 @@
 				</div>
 
 
-				<div class="cart-empty" th:if="${cartItems == null || #lists.isEmpty(cartItems)}">장바구니가 비어 있습니다.</div>
+				<div class="cart-empty" th:if="${cartItems == null || #lists.isEmpty(cartItems)}"></div>
 				<div class="cart-control">
 					<button class="default-btn control-btns delete-product-btn">삭제</button>
 					<button class="default-btn control-btns back-btn">쇼핑 계속하기</button>
