--- a/src/main/resources/templates/user/main/sample.html
+++ b/src/main/resources/templates/user/main/sample.html
@@ -135,6 +135,8 @@
     <span>검색결과가 없습니다</span>
     <span>아러대ㅓㄹ재더ㅑㄹ잴ㄷ러</span>
   </div>
+
+  <div class="list-wrap"></div>
 </div>
 
 <script src="/user/common/js/btn-event.js"></script>
