--- a/src/main/resources/templates/user/main/products/searchForm.html
+++ b/src/main/resources/templates/user/main/products/searchForm.html
@@ -101,7 +101,7 @@
 					    <label for="check-btn"></label>
 					  </div>
 				    <div class="product-img-area">
-				        <a th:href="'/user/products/detail?book_isbn=' + ${product.book_isbn}"><img class="product-image" th:src="@{/images/books/{image}(image=${product.book_thumbnail_changed})}" alt="책 이미지"></a>
+				        <a th:href="'/user/products/detail?book_isbn=' + ${product.book_isbn}"><img class="product-image" th:src="@{/images/books/{image}(image=${product.book_thumbnail_changed != null ? product.book_thumbnail_changed : 'noimg.png'})}" alt="책 이미지"></a>
 				    </div>
 				    <div class="product-info-area">
 				        <div class="book-name"><a th:href="'/user/products/detail?book_isbn=' + ${product.book_isbn}" th:text="${product.book_name}"></a></div>
