--- a/src/main/resources/templates/admin/customer_orders/customerDetail.html
+++ b/src/main/resources/templates/admin/customer_orders/customerDetail.html
@@ -138,6 +138,7 @@
 				<div class="price-column"><span>가격</span></div>
 				<div class="qty-column"><span>주문수량</span></div>
 				<div class="request-qty-column">요청수량</div>
+				<div class="complete-qty-column">처리완료</div>
 				<div class="input-qty-column">처리수량</div>
 				<div class="purchase-column"><span>구매금액</span></div>
 				<div class="order-status-column"><span>주문상태</span></div>
@@ -170,11 +171,14 @@
 						<input type="hidden" name="order_detail_qty" th:value="${info.order_detail_qty}"/>
 					</div>
 					<div class="request-qty-data">
-						<span th:text="${info.order_detail_qty <= 0 ? '-' : info.order_request_qty} + '개'"></span>
+						<span th:text="${info.order_detail_qty <= 0 ? '-' : info.order_request_qty + '개'}"></span>
 						<input type="hidden" name="order_request_qty" th:value="${info.order_request_qty}"/>
 					</div>
+					<div class="complete-qty-data">
+						<span th:text="${info.order_complete_qty <= 0 ? '-' : info.order_complete_qty + '개'}"></span>
+					</div>
 					<div class="input-qty-data">
-						<span><input type="number" name="input_qty" id="input_qty" oninput="qtyHandler(this);" th:value="${info.order_request_qty}"/></span>
+						<span><input type="number" name="input_qty" id="input_qty" oninput="qtyHandler(this);" th:value="${info.order_request_qty - info.order_complete_qty}" th:data-order-request-qty="${info.order_request_qty - info.order_complete_qty}"/></span>
 					</div>
 					<div class="purchase-data" >
 						<span th:text="${#numbers.formatInteger(info.order_price_sum, 0, 'COMMA')} + '원'"></span>
