--- a/src/main/resources/static/user/mypage/notices/css/notices.css
+++ b/src/main/resources/static/user/mypage/notices/css/notices.css
@@ -23,6 +23,8 @@
 }
 .notice-title {
 	margin-left: 60px;
+	text-decoration: underline;
+    cursor: pointer;
 }
 .notice-date {
 	margin-left: auto;
